Bug 832217 - Construct RegExpShared in the same compartment as the RegExpStatics. r=billm